--- a/styles/style.css
+++ b/styles/style.css
@@ -345,6 +345,11 @@ h1, h2, h3, h4, h5, h6{
     max-height: 40px;
 }
 
+.place-img{
+        max-width: 430px;
+        max-height: 100px;
+}
+
 .service-icon-2{
     margin-top: 50px;
     max-width: 20px;
@@ -626,8 +631,10 @@ footer{
 }
 
 .sign-form{
-    padding-top: 20px;
-    padding-bottom: 35px;
+    padding-top: 25px;
+    padding-bottom: 20px;
+    text-align: center;
+    vertical-align: 50%;
 }
 
 .link-color{
@@ -657,3 +664,210 @@ footer{
     padding-right: 3px;
     color: #fce38a;
 }
+
+.modal {
+    position: fixed; 
+    top: 0px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5); 
+    z-index: 1050;
+    opacity: 0; 
+    -webkit-transition: opacity 200ms ease-in; 
+    -moz-transition: opacity 200ms ease-in;
+    transition: opacity 200ms ease-in; 
+    pointer-events: none; 
+    margin: 0;
+    padding-top: 150px;
+}
+
+.modal:target {
+    opacity: 1; 
+	  pointer-events: auto; 
+    overflow-y: auto; 
+}
+
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin-top: 60px;
+}
+@media (min-width: 576px) {
+  .modal-dialog {
+      max-width: 850px;
+      margin: 30px auto;
+  }
+}
+
+.modal-content {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: rgb(231, 164, 190);
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+@media (min-width: 768px) {
+  .modal-content {
+      -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+      box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  }
+}
+
+.modal-header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: center;
+    padding: 15px;
+    border-bottom: 1px solid rgb(246, 230, 230);
+}
+
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+}
+
+.close {
+    float: right;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    padding-left: 5px;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+    text-decoration: none;
+}
+
+.close:focus, .close:hover {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: .75;
+}
+
+.modal-body {
+  position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 15px;
+    justify-content: center;
+    overflow: auto;
+}
+
+.table-1{
+    display: flex;
+    text-align: left;
+    border-radius: 10px;
+    background-color: rgb(7, 0, 0);
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 5px;
+    height: auto;
+}
+
+tbody{
+    font-size: 18px;
+    width: 100%;
+}
+
+.td-1{
+    font-family:cursive;
+    font-weight: bold;
+    font-size: 16px;
+    width: 50%;
+    border-right: 1px solid white;
+}
+
+.td-2{
+    padding-left: 5px;
+    width: 50%;
+}
+
+.user{
+    display: flex;
+    justify-content: center;
+    color: rgb(231, 164, 190);
+}
+
+.name_content{
+    font-size: 16px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 15px;
+}
+
+.btn-2{
+    display: inline-block;
+    vertical-align: top;
+    padding: 8px 25px;
+
+    border: 3px solid rgb(231, 164, 190);
+    color: rgb(231, 164, 190);
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    background: white;
+
+    transition: color 0.1s linear;
+    transition: border-color 0.1s linear;
+}
+
+.btn-2:hover{
+    color: #fce38a;
+    border-color: #fce38a;
+}
+
+.input{
+    text-align: center;
+    padding-bottom: 7px;
+}
+
+.sing-inp_comm{
+    padding-bottom: 5px;
+    padding-top: 5px;
+    width: 600px;
+    margin-bottom: 3px;
+    height: auto;
+    min-height: 35px;
+    border: none;
+    font-size: 16px;
+    background-color: rgb(246, 230, 230);
+    border-radius: 3px;
+}
+
+#content-comm{
+    height: 100px;
+}
+
+#div1{
+    display: none;
+  }
